disable build artifact

--- a/.build.yml
+++ b/.build.yml
@@ -10,8 +10,8 @@ tasks:
       make test
       make coverage
 
-artifacts:
-  - /tmp/report/cover-index.html
+#artifacts:
+#  - /tmp/report/cover-index.html
 
 sources:
   - git@git.sr.ht:~notmgsk/cl-json-schema
